--- a/shop.html
+++ b/shop.html
@@ -101,7 +101,7 @@
 
         p {
             text-indent: 1em;
-            /* font-size: 30px; */
+            font-size: 30px;
         }
     </style>
 </head>
