--- a/shop.html
+++ b/shop.html
@@ -99,16 +99,31 @@
             font: italic bold 30px/2;
         } */
 
-        p {
+        /* p {
             text-indent: 1em;
             font-size: 30px;
+        } */
+
+        .p1 {
+            text-align: left;
+        }
+        .p2 {
+            text-align: center;
+        }
+        .p3 {
+            text-align: right;
         }
     </style>
 </head>
 
 <body>
 
-    <p>Every second, the Sun's core fuses about 600 billion kilograms (kg) of hydrogen into helium and converts 4 billion kg of matter into energy. Far in the future, when hydrogen fusion in the Sun's core diminishes to the point where the Sun is no longer in hydrostatic equilibrium, its core will undergo a marked increase in density and temperature which will cause its outer layers to expand, eventually transforming the Sun into a red giant. This process will make the Sun large enough to render Earth uninhabitable approximately five billion years from the present.</p>
+    <p>aaa</p>
+    <p class="p1">aaa</p>
+    <p class="p2">aaa</p>
+    <p class="p3">aaa</p>
+
+    <!-- <p>Every second, the Sun's core fuses about 600 billion kilograms (kg) of hydrogen into helium and converts 4 billion kg of matter into energy. Far in the future, when hydrogen fusion in the Sun's core diminishes to the point where the Sun is no longer in hydrostatic equilibrium, its core will undergo a marked increase in density and temperature which will cause its outer layers to expand, eventually transforming the Sun into a red giant. This process will make the Sun large enough to render Earth uninhabitable approximately five billion years from the present.</p> -->
 
     <!-- <div>Every second, the Sun's core fuses about 600 billion kilograms.</div> -->
 
