--- a/shop.html
+++ b/shop.html
@@ -114,17 +114,35 @@
             text-align: right;
         } */
 
-        div {
+        /* div {
             text-align: center;
+        } */
+
+        .p0 {
+            text-decoration: none;
+        }
+        .p1 {
+            text-decoration: underline;
+        }
+        .p2 {
+            text-decoration: line-through;
+        }
+        .p3 {
+            text-decoration: overline;
         }
     </style>
 </head>
 
 <body>
 
-    <div>
+    <a class="p0" href="./home_page.html">none</a>
+    <p class="p1">underline</p>
+    <p class="p2">line-throuth</p>
+    <p class="p3">overline</p>
+
+    <!-- <div>
         <img src="./intro/images/Sun2.png">
-    </div>
+    </div> -->
 
     <!-- <p>aaa</p>
     <p class="p1">aaa</p>
