--- a/shop.html
+++ b/shop.html
@@ -118,7 +118,7 @@
             text-align: center;
         } */
 
-        .p0 {
+        /* .p0 {
             text-decoration: none;
         }
         .p1 {
@@ -129,16 +129,39 @@
         }
         .p3 {
             text-decoration: overline;
+        } */
+
+        .div1 {
+            color: red;
+        }
+        .div2 {
+            color: rgb(255, 0, 0);
+        }
+        .div3 {
+            color: rgba(255, 0, 0, 0.5);
+            background-color: black;
+        }
+        .div4 {
+            color: #FF0000;
+        }
+        .div5 {
+            color: #F00;
         }
     </style>
 </head>
 
 <body>
 
-    <a class="p0" href="./home_page.html">none</a>
+    <div class="div1">aaa</div>
+    <div class="div2">aaa</div>
+    <div class="div3">aaa</div>
+    <div class="div4">aaa</div>
+    <div class="div5">aaa</div>
+
+    <!-- <a class="p0" href="./home_page.html">none</a>
     <p class="p1">underline</p>
     <p class="p2">line-throuth</p>
-    <p class="p3">overline</p>
+    <p class="p3">overline</p> -->
 
     <!-- <div>
         <img src="./intro/images/Sun2.png">
