--- a/shop.html
+++ b/shop.html
@@ -131,7 +131,7 @@
             text-decoration: overline;
         } */
 
-        .div1 {
+        /* .div1 {
             color: red;
         }
         .div2 {
@@ -146,17 +146,24 @@
         }
         .div5 {
             color: #F00;
+        } */
+
+        div {
+            font-size: 200;
+            color: red;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="div1">aaa</div>
+    <div>aaa</div>
+
+    <!-- <div class="div1">aaa</div>
     <div class="div2">aaa</div>
     <div class="div3">aaa</div>
     <div class="div4">aaa</div>
-    <div class="div5">aaa</div>
+    <div class="div5">aaa</div> -->
 
     <!-- <a class="p0" href="./home_page.html">none</a>
     <p class="p1">underline</p>
