--- a/shop.html
+++ b/shop.html
@@ -148,8 +148,12 @@
             color: #F00;
         } */
 
-        div {
+        /* div {
             font-size: 200;
+            color: red;
+        } */
+
+        div span {
             color: red;
         }
     </style>
@@ -157,7 +161,17 @@
 
 <body>
 
-    <div>aaa</div>
+    <div>
+        <span>son</span>
+        <p>
+            <span>grandson</span>
+            <p>
+                <span>great-grandson</span>
+            </p>
+        </p>
+    </div>
+
+    <!-- <div>aaa</div> -->
 
     <!-- <div class="div1">aaa</div>
     <div class="div2">aaa</div>
