--- a/shop.html
+++ b/shop.html
@@ -153,7 +153,11 @@
             color: red;
         } */
 
-        div span {
+        /* div span {
+            color: red;
+        } */
+
+        div > span {
             color: red;
         }
     </style>
@@ -165,9 +169,9 @@
         <span>son</span>
         <p>
             <span>grandson</span>
-            <p>
+            <div>
                 <span>great-grandson</span>
-            </p>
+            </div>
         </p>
     </div>
 
