--- a/shop.html
+++ b/shop.html
@@ -157,7 +157,13 @@
             color: red;
         } */
 
-        div > span {
+        /* div > span {
+            color: red;
+        } */
+
+        p,
+        span,
+        div {
             color: red;
         }
     </style>
@@ -165,7 +171,11 @@
 
 <body>
 
-    <div>
+    <p>p</p>
+    <span>span</span>
+    <div>div</div>
+
+    <!-- <div>
         <span>son</span>
         <p>
             <span>grandson</span>
@@ -173,7 +183,7 @@
                 <span>great-grandson</span>
             </div>
         </p>
-    </div>
+    </div> -->
 
     <!-- <div>aaa</div> -->
 
