--- a/shop.html
+++ b/shop.html
@@ -161,9 +161,14 @@
             color: red;
         } */
 
-        p,
+        /* p,
         span,
         div {
+            color: red;
+        } */
+
+        /* span, */
+        p.aaa {
             color: red;
         }
     </style>
@@ -171,9 +176,13 @@
 
 <body>
 
-    <p>p</p>
+    <p class="aaa">1</p>
+    <p>2</p>
+    <span class="aaa">3</span>
+
+    <!-- <p>p</p>
     <span>span</span>
-    <div>div</div>
+    <div>div</div> -->
 
     <!-- <div>
         <span>son</span>
