--- a/shop.html
+++ b/shop.html
@@ -167,7 +167,7 @@
             color: red;
         } */
 
-        /* span, */
+        span,
         p.aaa {
             color: red;
         }
