--- a/shop.html
+++ b/shop.html
@@ -167,8 +167,15 @@
             color: red;
         } */
 
-        span,
+        /* span,
         p.aaa {
+            color: red;
+        } */
+
+        a:hover {
+            color: green;
+        }
+        p:hover {
             color: red;
         }
     </style>
@@ -176,9 +183,12 @@
 
 <body>
 
-    <p class="aaa">1</p>
+    <a href="#">aaa</a>
+    <p>bbb</p>
+
+    <!-- <p class="aaa">1</p>
     <p>2</p>
-    <span class="aaa">3</span>
+    <span class="aaa">3</span> -->
 
     <!-- <p>p</p>
     <span>span</span>
