--- a/shop.html
+++ b/shop.html
@@ -172,11 +172,24 @@
             color: red;
         } */
 
-        a:hover {
+        /* a:hover {
             color: green;
         }
         p:hover {
             color: red;
+        } */
+
+        a:link {
+            color: pink;
+        }
+        a:visited {
+            color: blue;
+        }
+        a:hover {
+            color: red;
+        }
+        a:active {
+            color: green;
         }
     </style>
 </head>
@@ -184,7 +197,9 @@
 <body>
 
     <a href="#">aaa</a>
-    <p>bbb</p>
+
+    <!-- <a href="#">aaa</a>
+    <p>bbb</p> -->
 
     <!-- <p class="aaa">1</p>
     <p>2</p>
