--- a/shop.html
+++ b/shop.html
@@ -179,7 +179,7 @@
             color: red;
         } */
 
-        a:link {
+        /* a:link {
             color: pink;
         }
         a:visited {
@@ -189,6 +189,13 @@
             color: red;
         }
         a:active {
+            color: green;
+        } */
+
+        a {
+            color: red;
+        }
+        a:hover {
             color: green;
         }
     </style>
