--- a/shop.html
+++ b/shop.html
@@ -192,18 +192,31 @@
             color: green;
         } */
 
-        a {
+        /* a {
             color: red;
         }
         a:hover {
             color: green;
+        } */
+
+        body {
+            color: red;
+            font-size: 40px;
+            text-decoration: underlineline-through;
+            font-weight: normal;
         }
     </style>
 </head>
 
 <body>
 
-    <a href="#">aaa</a>
+    <div>aaa</div>
+    <span>ccc</span>
+    <p>bbb</p>
+    <a href="#">ccc</a>
+    <h1>ddd</h1>
+
+    <!-- <a href="#">aaa</a> -->
 
     <!-- <a href="#">aaa</a>
     <p>bbb</p> -->
