--- a/shop.html
+++ b/shop.html
@@ -202,7 +202,7 @@
         body {
             color: red;
             font-size: 40px;
-            text-decoration: underlineline-through;
+            text-decoration: line-through;
             font-weight: normal;
         }
     </style>
