--- a/shop.html
+++ b/shop.html
@@ -199,25 +199,36 @@
             color: green;
         } */
 
-        body {
+        /* body {
             color: red;
             font-size: 40px;
             text-decoration: line-through;
             font-weight: normal;
+        } */
+
+        p {
+            color: blue;
+            font-weight: 700;
+        }
+        p {
+            color: green;
+            font-size: 80px;
         }
     </style>
 </head>
 
 <body>
 
-    <div>
+    <p>aaa</p>
+
+    <!-- <div>
         aaa
         <span>444</span>
     </div>
     <span>ccc</span>
     <p>bbb</p>
     <a href="#">ccc</a>
-    <h1>ddd</h1>
+    <h1>ddd</h1> -->
 
     <!-- <a href="#">aaa</a> -->
 
