--- a/shop.html
+++ b/shop.html
@@ -206,20 +206,37 @@
             font-weight: normal;
         } */
 
-        p {
+        /* p {
             color: blue;
             font-weight: 700;
         }
         p {
             color: green;
             font-size: 80px;
+        } */
+
+        * {
+            color: orange !important;
+        }
+        #pid {
+            color: pink;
+        }
+        .para {
+            color: blue;
+        }
+        p {
+            color: green;
+        }
+        * {
+            color: red;
         }
     </style>
 </head>
 
 <body>
 
-    <p>aaa</p>
+    <p class="para" id="pid">aaa</p>
+    <p class="para" id="pid" style="color: purple;">aaa</p>
 
     <!-- <div>
         aaa
