--- a/shop.html
+++ b/shop.html
@@ -234,7 +234,7 @@
         /* 0 2 1
         1 0 1
         1 1 0 */
-        .class1 .class2 div {
+        /* .class1 .class2 div {
             color: red;
         }
         div #id3 {
@@ -242,22 +242,31 @@
         }
         #id1 .class3 {
             color: blue;
+        } */
+
+        .para {
+            color: orange !important;
+        }
+        .para {
+            color: red !important;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="class1" id="id1">
+    <p class="para">aaa</p>
+
+    <!-- <div class="class1" id="id1">
         <div class="class2" id="id2">
             <div class="class3" id="id3">
                 text
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- <p class="para" id="pid">aaa</p>
-    <p class="para" id="pid" style="color: purple;">aaa</p> -->
+    <p class="para" id="pid1" style="color: purple;">aaa</p> -->
 
     <!-- <div>
         aaa
