--- a/shop.html
+++ b/shop.html
@@ -244,18 +244,45 @@
             color: blue;
         } */
 
-        .para {
+        /* .para {
             color: orange !important;
         }
         .para {
             color: red !important;
+        } */
+
+        div {
+            width: 200px;
+            height: 300px;
+            background-color: #fff;
         }
     </style>
 </head>
 
 <body>
 
-    <p class="para">aaa</p>
+    <p class="cp"></p>
+
+    <div class="cp"></div>
+
+    <p id="dd"></p>
+
+    <div id="ddd"></div>
+
+    <div></div>
+    <p></p>
+
+    <div>
+        <p></p>
+    </div>
+
+    <p></p>
+    <p></p>
+    <p></p>
+
+    <div>aaa</div>
+
+    <!-- <p class="para">aaa</p> -->
 
     <!-- <div class="class1" id="id1">
         <div class="class2" id="id2">
