--- a/shop.html
+++ b/shop.html
@@ -251,17 +251,26 @@
             color: red !important;
         } */
 
-        div {
+        /* div {
             width: 200px;
             height: 300px;
             background-color: #fff;
+        } */
+
+        div {
+            color: red;
+            width: 700px;
+            height: 600px;
+            background-image: url(./Sun3.jpg);
         }
     </style>
 </head>
 
 <body>
 
-    <p class="cp"></p>
+    <div>aaaaaa</div>
+
+    <!-- <p class="cp"></p>
 
     <div class="cp"></div>
 
@@ -280,7 +289,7 @@
     <p></p>
     <p></p>
 
-    <div>aaa</div>
+    <div>aaa</div> -->
 
     <!-- <p class="para">aaa</p> -->
 
