--- a/shop.html
+++ b/shop.html
@@ -261,7 +261,11 @@
             color: red;
             width: 700px;
             height: 600px;
+            background-color: pink;
             background-image: url(./Sun3.jpg);
+        }
+        div {
+            background-repeat: no-repeat;
         }
     </style>
 </head>
