--- a/shop.html
+++ b/shop.html
@@ -267,6 +267,15 @@
         div {
             background-repeat: no-repeat;
         }
+        div {
+            background-repeat: repeat;
+        }
+        div {
+            
+        }
+        div {
+            
+        }
     </style>
 </head>
 
