--- a/shop.html
+++ b/shop.html
@@ -271,7 +271,7 @@
             background-repeat: repeat;
         }
         div {
-            
+            background-repeat: repeat-x;
         }
         div {
             
