--- a/shop.html
+++ b/shop.html
@@ -274,7 +274,7 @@
             background-repeat: repeat-x;
         }
         div {
-            
+            background-repeat: repeat-y;
         }
     </style>
 </head>
