--- a/shop.html
+++ b/shop.html
@@ -277,7 +277,7 @@
             background-repeat: repeat-y;
         } */
 
-        div {
+        /* div {
             color: red;
             width: 700px;
             height: 600px;
@@ -314,6 +314,23 @@
         }
         div {
             background-position: 50px;
+        } */
+
+        div {
+            width: 600px;
+            height: 700px;
+            background-color: pink;
+            background-image: url(./Sun3.jpg);
+            background-repeat: no-repeat;
+        }
+        div {
+            background-size: contain;
+        }
+        div {
+            background-size: cover;
+        }
+        div {
+            background-size: 100%;
         }
     </style>
 </head>
