--- a/shop.html
+++ b/shop.html
@@ -316,7 +316,7 @@
             background-position: 50px;
         } */
 
-        div {
+        /* div {
             width: 600px;
             height: 700px;
             background-color: pink;
@@ -331,13 +331,68 @@
         }
         div {
             background-size: 100%;
+        } */
+
+        body {
+            background-image: url(./Sun3.jpg);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
     </style>
 </head>
 
 <body>
 
-    <div>aaaaaa</div>
+    <p>aaaaaaaaa</p>
+    <p>aaaaaaaaa</p>
+    <p>aaaaaaaaa</p>
+    <p>aaaaaaaaa</p>
+    <p>aaaaaaaaa</p>
+    <p>aaaaaaaaa</p>
+    <p>aaaaaaaaa</p>
+    <p>aaaaaaaaa</p>
+    <p>aaaaaaaaa</p>
+    <p>aaaaaaaaa</p>
+    <p>bbbb</p>
+    <p>bbbb</p>
+    <p>bbbb</p>
+    <p>bbbb</p>
+    <p>bbbb</p>
+    <p>bbbb</p>
+    <p>bbbb</p>
+    <p>bbbb</p>
+    <p>bbbb</p>
+    <p>bbbb</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>cccccccccccccccccc</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
+    <p>dd</p>
 
     <!-- <p class="cp"></p>
 
