--- a/shop.html
+++ b/shop.html
@@ -316,7 +316,7 @@
             background-position: 50px;
         } */
 
-        /* div {
+        div {
             width: 600px;
             height: 700px;
             background-color: pink;
@@ -331,19 +331,24 @@
         }
         div {
             background-size: 100%;
-        } */
+        }
+        div {
+            background-size: 46%;
+        }
 
-        body {
+        /* body {
             background-image: url(./Sun3.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
-        }
+        } */
     </style>
 </head>
 
 <body>
 
-    <p>aaaaaaaaa</p>
+    <div></div>
+
+    <!-- <p>aaaaaaaaa</p>
     <p>aaaaaaaaa</p>
     <p>aaaaaaaaa</p>
     <p>aaaaaaaaa</p>
@@ -392,7 +397,7 @@
     <p>dd</p>
     <p>dd</p>
     <p>dd</p>
-    <p>dd</p>
+    <p>dd</p> -->
 
     <!-- <p class="cp"></p>
 
