--- a/shop.html
+++ b/shop.html
@@ -316,7 +316,7 @@
             background-position: 50px;
         } */
 
-        div {
+        /* div {
             width: 600px;
             height: 700px;
             background-color: pink;
@@ -334,13 +334,19 @@
         }
         div {
             background-size: 46%;
-        }
+        } */
 
         /* body {
             background-image: url(./Sun3.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
         } */
+
+        div {
+            width: 700px;
+            height: 500px;
+            background: pink url(./Sun3.jpg) no-repeat center bottom/contain;
+        }
     </style>
 </head>
 
