--- a/shop.html
+++ b/shop.html
@@ -342,17 +342,33 @@
             background-attachment: fixed;
         } */
 
-        div {
+        /* div {
             width: 700px;
             height: 500px;
             background: pink url(./Sun3.jpg) no-repeat center bottom/contain;
+        } */
+
+        div {
+            width: 100px;
+            height: 100px;
+        }
+        .c1 {
+            background-color: red;
+        }
+        .c2 {
+            background-color: green;
         }
     </style>
 </head>
 
 <body>
 
-    <div></div>
+    <div class="c1">div1</div>
+    <div class="c2">div2</div>
+    <!-- <span class="s1">span1</span>
+    <span class="s2">span2</span> -->
+
+    <!-- <div></div> -->
 
     <!-- <p>aaaaaaaaa</p>
     <p>aaaaaaaaa</p>
