--- a/shop.html
+++ b/shop.html
@@ -358,6 +358,12 @@
         .c2 {
             background-color: green;
         }
+        .s1 {
+            background-color: red;
+        }
+        .s2 {
+            background-color: green;
+        }
     </style>
 </head>
 
@@ -365,8 +371,8 @@
 
     <div class="c1">div1</div>
     <div class="c2">div2</div>
-    <!-- <span class="s1">span1</span>
-    <span class="s2">span2</span> -->
+    <span class="s1">span1</span>
+    <span class="s2">span2</span>
 
     <!-- <div></div> -->
 
