--- a/shop.html
+++ b/shop.html
@@ -358,6 +358,10 @@
         .c2 {
             background-color: green;
         }
+        span {
+            width: 100px;
+            height: 100px;
+        }
         .s1 {
             background-color: red;
         }
