--- a/shop.html
+++ b/shop.html
@@ -377,6 +377,8 @@
     <div class="c2">div2</div>
     <span class="s1">span1</span>
     <span class="s2">span2</span>
+    <img src="./Sun3.jpg">
+    <img src="./Sun3.jpg">
 
     <!-- <div></div> -->
 
