--- a/shop.html
+++ b/shop.html
@@ -368,6 +368,10 @@
         .s2 {
             background-color: green;
         }
+        img {
+            width: 100px;
+            height: 100px;
+        }
     </style>
 </head>
 
