--- a/temp.html
+++ b/temp.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div {
-            width: 700px;
-            height: 500px;
-            background: pink url(https://wikiless.northboot.xyz/media/wikipedia/commons/8/83/The_Sun_in_white_light.jpg) no-repeat center bottom/contain fixed;
+        img {
+            width: 100px;
+            height: 100px;
         }
     </style>
 </head>
 
 <body>
 
-    <div></div>
+    <img src="https://wikiless.northboot.xyz/media/wikipedia/commons/8/83/The_Sun_in_white_light.jpg">
 
 </body>
 
