--- a/shop.html
+++ b/shop.html
@@ -348,7 +348,7 @@
             background: pink url(./Sun3.jpg) no-repeat center bottom/contain;
         } */
 
-        div {
+        /* div {
             width: 100px;
             height: 100px;
         }
@@ -371,7 +371,47 @@
         img {
             width: 100px;
             height: 100px;
+        } */
+
+        div {
+            width: 100px;
+            height: 100px;
         }
+        .c1 {
+            background-color: red;
+        }
+        .c2 {
+            background-color: green;
+        }
+        div {
+            display: inline-block;
+        }
+        div {
+            display: inline;
+        }
+        span {
+            width: 100px;
+            height: 100px;
+        }
+        .s1 {
+            background-color: red;
+        }
+        .s2 {
+            background-color: green;
+        }
+        /* span {
+            display: block;
+        }
+        span {
+            display: inline-block;
+        } */
+        img {
+            width: 100px;
+            height: 100px;
+        }
+        /* img {
+            display: block;
+        } */
     </style>
 </head>
 
@@ -379,10 +419,17 @@
 
     <div class="c1">div1</div>
     <div class="c2">div2</div>
-    <span class="s1">span1aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span>
+    <span class="s1">span1</span>
     <span class="s2">span2</span>
     <img src="./Sun3.jpg">
     <img src="./Sun3.jpg">
+
+    <!-- <div class="c1">div1</div>
+    <div class="c2">div2</div>
+    <span class="s1">span1aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span>
+    <span class="s2">span2</span>
+    <img src="./Sun3.jpg">
+    <img src="./Sun3.jpg"> -->
 
     <!-- <div></div> -->
 
