--- a/shop.html
+++ b/shop.html
@@ -399,12 +399,12 @@
         .s2 {
             background-color: green;
         }
-        /* span {
+        span {
             display: block;
         }
         span {
             display: inline-block;
-        } */
+        }
         img {
             width: 100px;
             height: 100px;
