--- a/shop.html
+++ b/shop.html
@@ -409,9 +409,9 @@
             width: 100px;
             height: 100px;
         }
-        /* img {
+        img {
             display: block;
-        } */
+        }
     </style>
 </head>
 
