--- a/shop.html
+++ b/shop.html
@@ -373,7 +373,7 @@
             height: 100px;
         } */
 
-        div {
+        /* div {
             width: 100px;
             height: 100px;
         }
@@ -411,18 +411,38 @@
         }
         img {
             display: block;
+        } */
+
+        a {
+            display: block;
+            width: 200px;
+            height: 100px;
+            background-color: rgb(32, 32, 234);
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            line-height: 100px;
+            font-size: 30px;
+        }
+        a:hover {
+            background-color: #de2525;
         }
     </style>
 </head>
 
 <body>
+    <a href="#">aaa</a>
+    <a href="#">bbb</a>
+    <a href="#">ccc</a>
+    <a href="#">ddd</a>
+    <a href="#">eee</a>
 
-    <div class="c1">div1</div>
+    <!-- <div class="c1">div1</div>
     <div class="c2">div2</div>
     <span class="s1">span1</span>
     <span class="s2">span2</span>
     <img src="./Sun3.jpg">
-    <img src="./Sun3.jpg">
+    <img src="./Sun3.jpg"> -->
 
     <!-- <div class="c1">div1</div>
     <div class="c2">div2</div>
