--- a/shop.html
+++ b/shop.html
@@ -413,7 +413,7 @@
             display: block;
         } */
 
-        a {
+        /* a {
             display: block;
             width: 200px;
             height: 100px;
@@ -426,16 +426,50 @@
         }
         a:hover {
             background-color: #de2525;
+        } */
+
+        .banner {
+            text-align: right;
+            height: 300px;
+            background-color: #f3f3f3;
+            background-image: url(./Sun3.jpg);
+            background-repeat: no-repeat;
+            background-position: left bottom;
+            background-size: 10%;
+            color: #322f2f;
+        }
+        .banner h2 {
+            text-align: right;
+            font-size: 30px;
+            font-weight: 400;
+        }
+        .banner p {
+            height: 50px;
+            line-height: 50px;
+        }
+        .banner a {
+            display: inline-block;
+            width: 100px;
+            height: 100px;
+            background-color: red;
+            text-align: center;
+            line-height: 100px;
+            text-decoration: none;
         }
     </style>
 </head>
 
 <body>
-    <a href="#">aaa</a>
+    <div class="banner">
+        <h2>aaa</h2>
+        <p>bbb</p>
+        <a href="#">ccc</a>
+    </div>
+    <!-- <a href="#">aaa</a>
     <a href="#">bbb</a>
     <a href="#">ccc</a>
     <a href="#">ddd</a>
-    <a href="#">eee</a>
+    <a href="#">eee</a> -->
 
     <!-- <div class="c1">div1</div>
     <div class="c2">div2</div>
