--- a/shop.html
+++ b/shop.html
@@ -428,7 +428,7 @@
             background-color: #de2525;
         } */
 
-        .banner {
+        /* .banner {
             text-align: right;
             height: 300px;
             background-color: #f3f3f3;
@@ -455,15 +455,34 @@
             text-align: center;
             line-height: 100px;
             text-decoration: none;
+        } */
+
+        li:first-child {
+            background-color: red;
+        }
+        li:last-child {
+            background-color: green;
+        }
+        li:nth-child(3) {
+            background-color: blue;
         }
     </style>
 </head>
 
 <body>
-    <div class="banner">
+
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+    </ul>
+
+    <!-- <div class="banner">
         <h2>aaa</h2>
         <p>bbb</p>
-        <a href="#">ccc</a>
+        <a href="#">ccc</a> -->
     </div>
     <!-- <a href="#">aaa</a>
     <a href="#">bbb</a>
