--- a/shop.html
+++ b/shop.html
@@ -457,7 +457,7 @@
             text-decoration: none;
         } */
 
-        li:first-child {
+        /* li:first-child {
             background-color: red;
         }
         li:last-child {
@@ -465,6 +465,10 @@
         }
         li:nth-child(3) {
             background-color: blue;
+        } */
+
+        li:nth-child(2n) {
+            background-color: red;
         }
     </style>
 </head>
@@ -477,6 +481,12 @@
         <li>3</li>
         <li>4</li>
         <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+        <li>11</li>
     </ul>
 
     <!-- <div class="banner">
