--- a/shop.html
+++ b/shop.html
@@ -467,7 +467,10 @@
             background-color: blue;
         } */
 
-        li:nth-child(2n) {
+        /* li:nth-child(2n) {
+            background-color: red;
+        } */
+        li:nth-child(2n+1) {
             background-color: red;
         }
     </style>
