--- a/shop.html
+++ b/shop.html
@@ -470,7 +470,10 @@
         /* li:nth-child(2n) {
             background-color: red;
         } */
-        li:nth-child(2n+1) {
+        /* li:nth-child(2n+1) {
+            background-color: red;
+        } */
+        li:nth-child(2n-1) {
             background-color: red;
         }
     </style>
