--- a/shop.html
+++ b/shop.html
@@ -476,7 +476,13 @@
         /* li:nth-child(2n-1) {
             background-color: red;
         } */
-        li:nth-child(3n) {
+        /* li:nth-child(3n) {
+            background-color: red;
+        } */
+        /* li:nth-child(3n+1) {
+            background-color: red;
+        } */
+        li:nth-child(n+4) {
             background-color: red;
         }
     </style>
