--- a/shop.html
+++ b/shop.html
@@ -482,7 +482,10 @@
         /* li:nth-child(3n+1) {
             background-color: red;
         } */
-        li:nth-child(n+4) {
+        /* li:nth-child(n+4) {
+            background-color: red;
+        } */
+        li:nth-child(-n+4) {
             background-color: red;
         }
     </style>
