--- a/shop.html
+++ b/shop.html
@@ -489,7 +489,7 @@
             background-color: red;
         } */
         
-        div {
+        /* div {
             text-align: right;
         }
         div::before {
@@ -505,6 +505,15 @@
             height: 100px;
             background-color: pink;
             display: inline-block;
+        } */
+
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: pink;
+            padding: 10px;
+            border: 1px solid #000;
+            
         }
     </style>
 </head>
