--- a/shop.html
+++ b/shop.html
@@ -488,7 +488,7 @@
         /* li:nth-child(-n+4) {
             background-color: red;
         } */
-        
+
         /* div {
             text-align: right;
         }
@@ -507,20 +507,34 @@
             display: inline-block;
         } */
 
-        div {
+        /* div {
             width: 100px;
             height: 100px;
             background-color: pink;
             padding: 10px;
             border: 1px solid #000;
-            
+            margin: 20px;
+        } */
+
+        div {
+            width: 100px;
+            height: 100px;
+        }
+        div {
+            border: 5px solid #000;
+        }
+        div {
+            border: 5px dashed #000;
+        }
+        div {
+            border: 5px dotted #000;
         }
     </style>
 </head>
 
 <body>
 
-    <div>bbb</div>
+    <div>aaa</div>
 
     <!-- <ul>
         <li>1</li>
