--- a/shop.html
+++ b/shop.html
@@ -516,7 +516,7 @@
             margin: 20px;
         } */
 
-        div {
+        /* div {
             width: 100px;
             height: 100px;
         }
@@ -528,6 +528,15 @@
         }
         div {
             border: 5px dotted #000;
+        } */
+
+        div {
+            width: 100px;
+            height: 100px;
+            border-left: 3px solid red;
+            border-right: 5px solid blue;
+            border-top: 7px dashed green;
+            border-bottom: 9px dotted black;
         }
     </style>
 </head>
