--- a/shop.html
+++ b/shop.html
@@ -530,13 +530,23 @@
             border: 5px dotted #000;
         } */
 
-        div {
+        /* div {
             width: 100px;
             height: 100px;
             border-left: 3px solid red;
             border-right: 5px solid blue;
             border-top: 7px dashed green;
             border-bottom: 9px dotted black;
+        } */
+
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: pink;
+            padding-top: 10px;
+            padding-bottom: 20px;
+            padding-left: 30px;
+            padding-right: 40px;
         }
     </style>
 </head>
