--- a/shop.html
+++ b/shop.html
@@ -539,7 +539,7 @@
             border-bottom: 9px dotted black;
         } */
 
-        div {
+        /* div {
             width: 100px;
             height: 100px;
             background-color: pink;
@@ -547,6 +547,24 @@
             padding-bottom: 20px;
             padding-left: 30px;
             padding-right: 40px;
+        } */
+
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: pink;
+        }
+        div {
+            padding: 10px 20px 30px 40px;
+        }
+        div {
+            padding: 10px 20px 30px;
+        }
+        div {
+            padding: 10px 20px;
+        }
+        div {
+            padding: 10px;
         }
     </style>
 </head>
