--- a/shop.html
+++ b/shop.html
@@ -549,7 +549,7 @@
             padding-right: 40px;
         } */
 
-        div {
+        /* div {
             width: 100px;
             height: 100px;
             background-color: pink;
@@ -565,6 +565,14 @@
         }
         div {
             padding: 10px;
+        } */
+
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: pink;
+            padding: 10px;
+            box-sizing: border-box;
         }
     </style>
 </head>
