--- a/shop.html
+++ b/shop.html
@@ -567,12 +567,21 @@
             padding: 10px;
         } */
 
-        div {
+        /* div {
             width: 100px;
             height: 100px;
             background-color: pink;
             padding: 10px;
             box-sizing: border-box;
+        } */
+
+        div {
+            width: 200px;
+            height: 100px;
+            background-color: pink;
+        }
+        div {
+            margin: 5px;
         }
     </style>
 </head>
