--- a/shop.html
+++ b/shop.html
@@ -583,6 +583,12 @@
         div {
             margin: 5px;
         }
+        div {
+            margin-top: 10px;
+            margin-right: 20px;
+            margin-bottom: 30px;
+            margin-left: 40px;
+        }
     </style>
 </head>
 
