--- a/shop.html
+++ b/shop.html
@@ -589,6 +589,9 @@
             margin-bottom: 30px;
             margin-left: 40px;
         }
+        div {
+            margin: 5px 6px 7px 8px;
+        }
     </style>
 </head>
 
