--- a/shop.html
+++ b/shop.html
@@ -592,6 +592,9 @@
         div {
             margin: 5px 6px 7px 8px;
         }
+        div {
+            margin: 10px 20px 30px;
+        }
     </style>
 </head>
 
