--- a/shop.html
+++ b/shop.html
@@ -595,6 +595,9 @@
         div {
             margin: 10px 20px 30px;
         }
+        div {
+            margin: 10px 20px;
+        }
     </style>
 </head>
 
