--- a/shop.html
+++ b/shop.html
@@ -575,7 +575,7 @@
             box-sizing: border-box;
         } */
 
-        div {
+        /* div {
             width: 200px;
             height: 100px;
             background-color: pink;
@@ -597,6 +597,24 @@
         }
         div {
             margin: 10px 20px;
+        } */
+
+        div {
+            width: 500px;
+            height: 100px;
+            background-color: pink;
+        }
+        div {
+            margin: 0 auto;
+        }
+        span {
+            display: inline-block;
+            width: 50px;
+            height: 20px;
+            background-color: pink;
+        }
+        span {
+            margin: 10 auto;
         }
     </style>
 </head>
@@ -604,6 +622,9 @@
 <body>
 
     <div>aaa</div>
+    <span>bbb</span>
+    <span>bbb</span>
+    <span>bbb</span>
 
     <!-- <ul>
         <li>1</li>
