--- a/shop.html
+++ b/shop.html
@@ -599,7 +599,7 @@
             margin: 10px 20px;
         } */
 
-        div {
+        /* div {
             width: 500px;
             height: 100px;
             background-color: pink;
@@ -615,16 +615,30 @@
         }
         span {
             margin: 10 auto;
+        } */
+
+        li {
+            list-style: none;
+        }
+        * {
+            margin: 0;
+            padding: 0;
         }
     </style>
 </head>
 
 <body>
 
-    <div>aaa</div>
+    <h1>h1</h1>
+    <p>p</p>
+    <ul>
+        <li>li</li>
+    </ul>
+
+    <!-- <div>aaa</div>
     <span>bbb</span>
     <span>bbb</span>
-    <span>bbb</span>
+    <span>bbb</span> -->
 
     <!-- <ul>
         <li>1</li>
