--- a/shop.html
+++ b/shop.html
@@ -617,23 +617,40 @@
             margin: 10 auto;
         } */
 
-        li {
+        /* li {
             list-style: none;
         }
         * {
             margin: 0;
             padding: 0;
+        } */
+
+        p {
+            width: 100px;
+            height: 100px;
+            background-color: pink;
+        }
+        p {
+            overflow: hidden;
+        }
+        p {
+            overflow: scroll;
+        }
+        p {
+            overflow: auto;
         }
     </style>
 </head>
 
 <body>
 
-    <h1>h1</h1>
+    <p>aaaaaa</p>
+
+    <!-- <h1>h1</h1>
     <p>p</p>
     <ul>
         <li>li</li>
-    </ul>
+    </ul> -->
 
     <!-- <div>aaa</div>
     <span>bbb</span>
