--- a/shop.html
+++ b/shop.html
@@ -665,6 +665,7 @@
 
         .father {
             overflow: hidden;
+            box-sizing: border-box;
         }
         .son {
             margin-top: 50px;
@@ -672,6 +673,7 @@
 
         .father{
             border-top: 1px solid #000;
+            box-sizing: border-box;
         }
         .son {
             margin-top: 50px;
