--- a/shop.html
+++ b/shop.html
@@ -652,7 +652,7 @@
             margin-top: 20px;
         } */
 
-        .father {
+        /* .father {
             width: 200px;
             height: 200px;
             background-color: pink;
@@ -681,15 +681,24 @@
         .father{
             padding-top: 50px;
             box-sizing: border-box;
+        } */
+
+        span {
+            margin: 10px;
+            padding: 10px;
+            line-height: 100px;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="father">
+    <span>span1</span>
+    <span>span2</span>
+
+    <!-- <div class="father">
         <div class="son"></div>
-    </div>
+    </div> -->
 
     <!-- <div class="div1">div1</div>
     <div class="div2">div2</div> -->
