--- a/shop.html
+++ b/shop.html
@@ -683,18 +683,38 @@
             box-sizing: border-box;
         } */
 
-        span {
+        /* span {
             margin: 10px;
             padding: 10px;
             line-height: 100px;
+        } */
+
+        div {
+            width: 200px;
+            height: 200px;
+            background-color: pink;
+        }
+        div {
+            border-radius: 10px;
+        }
+        div {
+            border-radius: 10px 20px 40px 80px;
+        }
+        div {
+            border-radius: 10px 40px 80px;
+        }
+        div {
+            border-radius: 10px 80px;
         }
     </style>
 </head>
 
 <body>
 
-    <span>span1</span>
-    <span>span2</span>
+    <div></div>
+
+    <!-- <span>span1</span>
+    <span>span2</span> -->
 
     <!-- <div class="father">
         <div class="son"></div>
