--- a/shop.html
+++ b/shop.html
@@ -689,7 +689,7 @@
             line-height: 100px;
         } */
 
-        div {
+        /* div {
             width: 200px;
             height: 200px;
             background-color: pink;
@@ -705,13 +705,45 @@
         }
         div {
             border-radius: 10px 80px;
+        } */
+
+        .div1 {
+            width: 200px;
+            height: 200px;
+            background-color: pink;
+        }
+        .div2 {
+            width: 200px;
+            height: 40px;
+            background-color: orange;
+        }
+
+        .div1 {
+            border-radius: 100px;
+        }
+        .div1 {
+            border-radius: 101px;
+        }
+        .div1 {
+            border-radius: 50%;
+        }
+        .div1 {
+            border-radius: 51%;
+        }
+
+        .div2 {
+            border-radius: 20px;
+        }
+        .div2 {
+            border-radius: 21px;
         }
     </style>
 </head>
 
 <body>
 
-    <div></div>
+    <div class="div1"></div>
+    <div class="div2"></div>
 
     <!-- <span>span1</span>
     <span>span2</span> -->
