--- a/shop.html
+++ b/shop.html
@@ -707,7 +707,7 @@
             border-radius: 10px 80px;
         } */
 
-        .div1 {
+        /* .div1 {
             width: 200px;
             height: 200px;
             background-color: pink;
@@ -736,14 +736,22 @@
         }
         .div2 {
             border-radius: 21px;
+        } */
+
+        div {
+            width: 200px;
+            height: 200px;
+            background-color: pink;
+            box-shadow: 3px 5px 11px 15px rgba(0, 0, 0, 0.5) inset;
         }
     </style>
 </head>
 
 <body>
+    <div></div>
 
-    <div class="div1"></div>
-    <div class="div2"></div>
+    <!-- <div class="div1"></div>
+    <div class="div2"></div> -->
 
     <!-- <span>span1</span>
     <span>span2</span> -->
