--- a/temp.html
+++ b/temp.html
@@ -6,20 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        p {
-            width: 100px;
-            height: 100px;
+        .news {
+            width: 500px;
+            height: 300px;
             background-color: pink;
         }
-        p {
-            overflow: auto;
+        .news .hd {
+            height: 40px;
+            background-color: #575252;
+        }
+        .news .hd a {
+            display: block;
+            width: 100px;
+            height: 30px;
+            background-color: #753030;
+            text-align: center;
         }
     </style>
 </head>
 
 <body>
 
-    <p>aaaaaa</p>
+    <div class="news">
+        <div class="hd">
+            <a href="#">news</a>
+        </div>
+    </div>
 
 </body>
 
