--- a/shop.html
+++ b/shop.html
@@ -738,17 +738,86 @@
             border-radius: 21px;
         } */
 
-        div {
+        /* div {
             width: 200px;
             height: 200px;
             background-color: pink;
             box-shadow: 3px 5px 11px 15px rgba(0, 0, 0, 0.5) inset;
+        } */
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        a {
+            text-decoration: none;
+        }
+        li {
+            list-style: none;
+        }
+        .news {
+            width: 500px;
+            height: 300px;
+            background-color: pink;
+        }
+        .news .hd {
+            height: 50px;
+            background-color: #d0c9c9;
+            border: 1px solid #696565;
+            border-left: 0 solid #000;
+            text-align: center;
+            line-height: 45px;
+        }
+        .news .hd a {
+            display: block;
+            width: 50px;
+            height: 50px;
+            background-color: #fff;
+            border-top: 3px solid orange;
+            border-right: 1px solid #696565;
+            margin-top: -1px;
+            font-size: 12px;
+            color: aqua;
+        }
+        .news .bd {
+            padding-left: 10px;
+        }
+        .news .bd li {
+            padding-left: 14px;
+            background-image: url(./images/1.png);
+            background-repeat: no-repeat;
+            background-size: 10px 10px;
+            background-position: 0 center;
+        }
+        .news .bd li a {
+            background-image: url(./images/2.png);
+            background-repeat: no-repeat;
+            background-size: 10px 10px;
+            background-position: 0 center;
+            padding-left: 12px;
+            font-size: 13px;
+            color: aquamarine;
+            line-height: 30px;
         }
     </style>
 </head>
 
 <body>
-    <div></div>
+    <div class="news">
+        <div class="hd">
+            <a href="#">news</a>
+        </div>
+        <div class="bd">
+            <ul>
+                <li><a href="#">aaa</a></li>
+                <li><a href="#">bbbbbbbbb</a></li>
+                <li><a href="#">ccccc</a></li>
+                <li><a href="#">ddddddddddddddddd</a></li>
+                <li><a href="#">eeeeeeeeeee</a></li>
+            </ul>
+        </div>
+    </div>
 
     <!-- <div class="div1"></div>
     <div class="div2"></div> -->
