--- a/temp.html
+++ b/temp.html
@@ -6,32 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .news {
+        div {
             width: 500px;
-            height: 300px;
+            height: 100px;
             background-color: pink;
+            margin: 0 auto;
         }
-        .news .hd {
-            height: 40px;
-            background-color: #575252;
-        }
-        .news .hd a {
+
+        span {
             display: block;
-            width: 100px;
-            height: 30px;
-            background-color: #753030;
-            text-align: center;
+            width: 50px;
+            height: 20px;
+            background-color: red;
+            margin: 10px auto;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="news">
-        <div class="hd">
-            <a href="#">news</a>
-        </div>
-    </div>
+    <div></div>
+    <span></span>
 
 </body>
 
