--- a/shop.html
+++ b/shop.html
@@ -608,13 +608,13 @@
             margin: 0 auto;
         }
         span {
-            display: inline-block;
+            display: block;
             width: 50px;
             height: 20px;
             background-color: pink;
         }
         span {
-            margin: 10 auto;
+            margin: 10px auto;
         } */
 
         /* li {
@@ -745,7 +745,7 @@
             box-shadow: 3px 5px 11px 15px rgba(0, 0, 0, 0.5) inset;
         } */
 
-        * {
+        /* * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -799,12 +799,12 @@
             font-size: 13px;
             color: aquamarine;
             line-height: 30px;
-        }
+        } */
     </style>
 </head>
 
 <body>
-    <div class="news">
+    <!-- <div class="news">
         <div class="hd">
             <a href="#">news</a>
         </div>
@@ -817,7 +817,7 @@
                 <li><a href="#">eeeeeeeeeee</a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 
     <!-- <div class="div1"></div>
     <div class="div2"></div> -->
