--- a/shop.html
+++ b/shop.html
@@ -800,10 +800,32 @@
             color: aquamarine;
             line-height: 30px;
         } */
+
+        .div1 {
+            width: 100px;
+            height: 100px;
+            background-color: red;
+        }
+        .div2 {
+            width: 200px;
+            height: 200px;
+            background-color: blue;
+        }
+        
+        .div1 {
+            float: left;
+        }
+        .div2 {
+            float: left;
+        }
     </style>
 </head>
 
 <body>
+
+    <div class="div1"></div>
+    <div class="div2"></div>
+
     <!-- <div class="news">
         <div class="hd">
             <a href="#">news</a>
