--- a/shop.html
+++ b/shop.html
@@ -811,9 +811,42 @@
             height: 200px;
             background-color: blue;
         }
+
+        .div1 {
+            float: left;
+        }
+
+        .div2 {
+            float: left;
+        }
+
+        .div2 {
+            float: right;
+        }
         
         .div1 {
             float: left;
+        }
+        .div2 {
+            float: left;
+        }
+
+        .div1 {
+            float: right;
+        }
+        .div2 {
+            float: right;
+        }
+
+        .div1 {
+            float: left;
+        }
+        .div2 {
+            float: right;
+        }
+
+        .div1 {
+            float: right;
         }
         .div2 {
             float: left;
