--- a/temp.html
+++ b/temp.html
@@ -6,27 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div {
-            width: 500px;
+        .div2 {
+            width: 100px;
             height: 100px;
-            background-color: pink;
-            margin: 0 auto;
+            background-color: red;
         }
 
-        span {
-            display: block;
-            width: 50px;
-            height: 20px;
-            background-color: red;
-            margin: 10px auto;
+        .div1 {
+            width: 200px;
+            height: 200px;
+            background-color: blue;
+        }
+
+        .div1 {
+            float: left;
         }
     </style>
 </head>
 
 <body>
 
-    <div></div>
-    <span></span>
+    <div class="div1"></div>
+    <div class="div2"></div>
 
 </body>
 
