--- a/shop.html
+++ b/shop.html
@@ -801,7 +801,7 @@
             line-height: 30px;
         } */
 
-        .div1 {
+        /* .div1 {
             width: 100px;
             height: 100px;
             background-color: red;
@@ -849,6 +849,22 @@
             float: right;
         }
         .div2 {
+            float: left;
+        } */
+
+        .div2 {
+            width: 100px;
+            height: 100px;
+            background-color: red;
+        }
+
+        .div1 {
+            width: 200px;
+            height: 200px;
+            background-color: blue;
+        }
+
+        .div1 {
             float: left;
         }
     </style>
