--- a/shop.html
+++ b/shop.html
@@ -852,7 +852,7 @@
             float: left;
         } */
 
-        .div2 {
+        /* .div2 {
             width: 100px;
             height: 100px;
             background-color: red;
@@ -866,14 +866,71 @@
 
         .div1 {
             float: left;
+        } */
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        li {
+            list-style: none;
+        }
+        .products {
+            margin: 50px auto;
+            width: 1240px;
+            height: 628px;
+            background-color: pink;
+        }
+        .products .intro {
+            float: left;
+            width: 248px;
+            height: 628px;
+            background-color: red;
+        }
+        .products .detail {
+            float: right;
+            width: 978px;
+            height: 628px;
+            background-color: blue;
+        }
+        .products .detail li {
+            float: left;
+            margin-right: 14px;
+            margin-bottom: 27px;
+            width: 234px;
+            height: 300px;
+            background-color: orange;
+        }
+        .products .detail li:nth-child(4n) {
+            margin-right: 0;
+        }
+        .products .detail li:nth-child(n+5) {
+            margin-bottom: 0;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="div1"></div>
-    <div class="div2"></div>
+    <div class="products">
+        <div class="intro"></div>
+        <div class="detail">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- <div class="div1"></div>
+    <div class="div2"></div> -->
 
     <!-- <div class="news">
         <div class="hd">
