--- a/shop.html
+++ b/shop.html
@@ -868,7 +868,7 @@
             float: left;
         } */
 
-        * {
+        /* * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -907,13 +907,42 @@
         }
         .products .detail li:nth-child(n+5) {
             margin-bottom: 0;
+        } */
+
+        .div1 {
+            margin: 20px auto;
+            width: 1000px;
+            /* height: 500px; */
+            background-color: pink;
+        }
+        .div1 .left {
+            float: left;
+            width: 100px;
+            height: 500px;
+            background-color: red;
+        }
+        .div1 .right {
+            float: right;
+            width: 800px;
+            height: 500px;
+            background-color: blue;
+        }
+        .div2 {
+            height: 100px;
+            background-color: black;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="products">
+    <div class="div1">
+        <div class="left"></div>
+        <div class="right"></div>
+    </div>
+    <div class="div2"></div>
+
+    <!-- <div class="products">
         <div class="intro"></div>
         <div class="detail">
             <ul>
@@ -927,7 +956,7 @@
                 <li></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 
     <!-- <div class="div1"></div>
     <div class="div2"></div> -->
