--- a/shop.html
+++ b/shop.html
@@ -927,6 +927,9 @@
             height: 500px;
             background-color: blue;
         }
+        .div1 .clearfix {
+            clear: both;
+        }
         .div2 {
             height: 100px;
             background-color: black;
@@ -939,6 +942,7 @@
     <div class="div1">
         <div class="left"></div>
         <div class="right"></div>
+        <div class="clearfix"></div>
     </div>
     <div class="div2"></div>
 
