--- a/shop.html
+++ b/shop.html
@@ -934,7 +934,7 @@
             background-color: black;
         } */
 
-        .div1 {
+        /* .div1 {
             margin: 20px auto;
             width: 1000px;
             background-color: pink;
@@ -942,6 +942,36 @@
         .clearfix::after {
             content: '';
             display: block;
+            clear: both;
+        }
+        .div1 .left {
+            float: left;
+            width: 100px;
+            height: 500px;
+            background-color: red;
+        }
+        .div1 .right {
+            float: right;
+            width: 800px;
+            height: 500px;
+            background-color: blue;
+        }
+        .div2 {
+            height: 100px;
+            background-color: black;
+        } */
+
+        .div1 {
+            margin: 20px auto;
+            width: 1000px;
+            background-color: pink;
+        }
+        .clearfix::before,
+        .clearfix::after {
+            content: '';
+            display: table;
+        }
+        .clearfix::after {
             clear: both;
         }
         .div1 .left {
