--- a/temp.html
+++ b/temp.html
@@ -6,28 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .div2 {
-            width: 100px;
-            height: 100px;
+        .clearfix::before,
+        .clearfix::after {
+            content: '';
+            display: table;
+        }
+        .clearfix::after {
+            clear: both;
+        }
+        .div1 {
+            width: 300px;
+            /* height: 300px; */
             background-color: red;
         }
 
-        .div1 {
-            width: 200px;
-            height: 200px;
-            background-color: blue;
-        }
-
-        .div1 {
+        .div2 {
             float: left;
+            margin-top: 100px;
+            width: 100px;
+            height: 100px;
+            background-color: blue;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="div1"></div>
-    <div class="div2"></div>
+    <div class="div1 clearfix">
+        <div class="div2"></div>
+    </div>
 
 </body>
 
