--- a/temp.html
+++ b/temp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .clearfix::before,
+        /* .clearfix::before,
         .clearfix::after {
             content: '';
             display: table;
@@ -16,7 +16,6 @@
         }
         .div1 {
             width: 300px;
-            /* height: 300px; */
             background-color: red;
         }
 
@@ -26,13 +25,24 @@
             width: 100px;
             height: 100px;
             background-color: blue;
+        } */
+
+        .div1 {
+            background-color: red;
+        }
+        .div2 {
+            /* float: left; */
+            /* margin-top: 100px; */
+            width: 100px;
+            height: 100px;
+            background-color: blue;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="div1 clearfix">
+    <div class="div1">
         <div class="div2"></div>
     </div>
 
